added final objective

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -512,21 +512,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 721.3968731672105,\n",
-       " 'train_RMSE_to_std_ratio': 0.6250275477020395,\n",
-       " 'train_MAE:': 513.6525913271923,\n",
-       " 'test_RMSE:': 833.177098601647,\n",
-       " 'test_RMSE_to_std_ratio': 0.746361174659176,\n",
-       " 'test_MAE:': 557.4898258667698}"
+       "{'train_RMSE:': 775.2071297497488,\n",
+       " 'train_RMSE_to_std_ratio': 0.6716494474690015,\n",
+       " 'train_MAE:': 533.3797480868415,\n",
+       " 'test_RMSE:': 838.6686685160196,\n",
+       " 'test_RMSE_to_std_ratio': 0.7512805304346684,\n",
+       " 'test_MAE:': 559.3233676640386}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
-    "    run_cv=False,\n",
+    "    run_cv=True,\n",
     "    cv_folds=5,\n",
     "    file_path='singleModel_noSplit_pickles',\n",
     "    model_name='xgbreg_all_features'\n",
@@ -551,7 +551,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2850.000644965194"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2842.231533374848"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(y_holdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -559,11 +599,11 @@
      "output_type": "stream",
      "text": [
       "Cross-validation results (RMSE): \n",
-      "[924.6696, 967.5788, 972.99457, 897.3391, 884.804]\n",
-      "Mean of cross-validation results (RMSE): 929.47723\n",
+      "[928.0659595118198, 866.9700127007313, 861.5295421654322, 927.3771927147455, 899.9744304738704]\n",
+      "Mean of cross-validation results (RMSE): 896.7834275133198\n",
       "Best estimator: xgb_limitdepth\n",
       "Best configuration: \n",
-      "{'n_estimators': 320, 'max_depth': 8, 'min_child_weight': 1.6246436031409632, 'learning_rate': 0.13924406975323256, 'subsample': 0.6897177882905062, 'colsample_bylevel': 0.9440262969164847, 'colsample_bytree': 1.0, 'reg_alpha': 0.005098546530512515, 'reg_lambda': 102.08934941463467}\n"
+      "{'n_estimators': 1028, 'max_depth': 6, 'min_child_weight': 1.4640336660392816, 'learning_rate': 0.02159558962109372, 'subsample': 0.8640052147174596, 'colsample_bylevel': 0.8726369812699186, 'colsample_bytree': 0.9407746256493329, 'reg_alpha': 0.0009765625, 'reg_lambda': 13.44701768864806}\n"
      ]
     }
    ],
@@ -764,17 +804,20 @@
     "\n",
     "Performance statistics for my xgboost model against a holdout sample size of 0.2 are as follows:\n",
     "\n",
-    "    {'train_RMSE:': 721.3968731672105,\n",
-    "    'train_RMSE_to_std_ratio': 0.6250275477020395,\n",
-    "    'train_MAE:': 513.6525913271923,\n",
-    "    'test_RMSE:': 833.177098601647,\n",
-    "    'test_RMSE_to_std_ratio': 0.746361174659176,\n",
-    "    'test_MAE:': 557.4898258667698}\n",
+    "    {'train_RMSE:': 775.2071297497488,\n",
+    "    'train_RMSE_to_std_ratio': 0.6716494474690015,\n",
+    "    'train_MAE:': 533.3797480868415,\n",
+    "    'test_RMSE:': 838.6686685160196,\n",
+    "    'test_RMSE_to_std_ratio': 0.7512805304346684,\n",
+    "    'test_MAE:': 559.3233676640386}\n",
     "\n",
-    "    Cross-validation results (RMSE): \n",
-    "    [924.6696, 967.5788, 972.99457, 897.3391, 884.804]\n",
+    "Cross-validation results (RMSE): \n",
     "\n",
-    "    Mean of cross-validation results (RMSE): 929.47723\n",
+    "    [928.0659595118198, 866.9700127007313, 861.5295421654322, 927.3771927147455, 899.9744304738704]\n",
+    "\n",
+    "Mean of cross-validation results (RMSE):\n",
+    "\n",
+    "    896.7834275133198\n",
     "\n",
     "Performance statistics for my xgboost model against a holdout size of 0.33:\n",
     "\n",
@@ -1300,7 +1343,23 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 629.4737460788326,\n",
+       " 'train_RMSE_to_std_ratio': 0.5453841657604123,\n",
+       " 'train_MAE:': 455.779582570263,\n",
+       " 'test_RMSE:': 849.1551127581309,\n",
+       " 'test_RMSE_to_std_ratio': 0.7606743014056613,\n",
+       " 'test_MAE:': 557.112726920179}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "composite_deliv_model = ApplyMethod_autoML(\n",
     "    x_train=composite_train,\n",
@@ -1321,11 +1380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[684.0892768296953, 681.0979618118614, 677.0700958150553, 699.8305918514759, 691.835106692473]\n",
+      "686.7846066001122\n"
+     ]
+    }
+   ],
    "source": [
-    "composite_deliv_model[3]"
+    "print(composite_deliv_model[3])\n",
+    "print(np.mean(composite_deliv_model[3]))"
    ]
   },
   {
@@ -1333,34 +1402,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "w/ composite_deliv_time:\n",
-    "{'train_RMSE:': 815.1652,\n",
-    " 'train_RMSE_to_std_ratio': 0.7034888565661281,\n",
-    " 'train_MAE:': 570.45123,\n",
-    " 'test_RMSE:': 912.44415,\n",
-    " 'test_RMSE_to_std_ratio': 0.808361492679291,\n",
-    " 'test_MAE:': 600.00836}\n",
+    "Holdout, train scores:\n",
     "\n",
-    "cv RMSE scores: [867.7579, 910.20544, 906.0279, 855.9836, 840.6531]\n",
-    "Mean RMSE from cv: 876.1256\n",
-    "cv RMSE to y-true std: 0.7761858125345661\n",
+    "    {'train_RMSE:': 629.4737460788326,\n",
+    "    'train_RMSE_to_std_ratio': 0.5453841657604123,\n",
+    "    'train_MAE:': 455.779582570263,\n",
+    "    'test_RMSE:': 849.1551127581309,\n",
+    "    'test_RMSE_to_std_ratio': 0.7606743014056613,\n",
+    "    'test_MAE:': 557.112726920179}\n",
     "\n",
-    " w/o composite_deliv_time:\n",
-    "{'train_RMSE:': 793.01575,\n",
-    " 'train_RMSE_to_std_ratio': 0.6843738250531922,\n",
-    " 'train_MAE:': 559.7056,\n",
-    " 'test_RMSE:': 907.7776,\n",
-    " 'test_RMSE_to_std_ratio': 0.8042272435967454,\n",
-    " 'test_MAE:': 600.7541}\n",
+    "cv RMSE scores: \n",
     "\n",
-    "[860.98395, 901.5238, 898.82605, 853.83453, 833.52484]\n",
-    "869.73865\n",
-    "0.7705274115903241"
+    "    [684.0892768296953, 681.0979618118614, 677.0700958150553, 699.8305918514759, 691.835106692473]\n",
+    "\n",
+    "Mean RMSE from cv: 686.7846066001122\n",
+    "\n",
+    "cv RMSE to y-true std: 0.7761858125345661"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1392,77 +1454,77 @@
        "    <tr>\n",
        "      <th>163</th>\n",
        "      <td>pred_order_prep_time</td>\n",
-       "      <td>0.314096</td>\n",
+       "      <td>0.225464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>est_time_non-prep</td>\n",
-       "      <td>0.050941</td>\n",
+       "      <td>0.060059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>market_id__2.0</td>\n",
+       "      <td>0.019890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>market_id__6.0</td>\n",
+       "      <td>0.017967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>created_hour_of_day__20</td>\n",
+       "      <td>0.017099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>clean_store_primary_category__catering</td>\n",
+       "      <td>0.014153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>estimated_store_to_consumer_driving_duration</td>\n",
-       "      <td>0.022149</td>\n",
+       "      <td>0.013680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>market_id__4.0</td>\n",
-       "      <td>0.012894</td>\n",
+       "      <th>29</th>\n",
+       "      <td>hour_onshift_outs_avg</td>\n",
+       "      <td>0.012411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.012503</td>\n",
+       "      <td>0.010589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>clean_store_primary_category__dessert</td>\n",
-       "      <td>0.011970</td>\n",
+       "      <th>136</th>\n",
+       "      <td>order_protocol__6.0</td>\n",
+       "      <td>0.010142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>total_items</td>\n",
-       "      <td>0.010003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>hour_mean_total_onshift_dashers</td>\n",
-       "      <td>0.009541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>estimated_order_place_duration</td>\n",
-       "      <td>0.009181</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>clean_store_primary_category__american</td>\n",
-       "      <td>0.008342</td>\n",
+       "      <th>15</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.009702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>hour_busy_outs_avg</td>\n",
-       "      <td>0.008217</td>\n",
+       "      <td>0.009468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>clean_store_primary_category__indian</td>\n",
-       "      <td>0.008135</td>\n",
+       "      <th>156</th>\n",
+       "      <td>created_day_of_week__0</td>\n",
+       "      <td>0.009286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>clean_store_primary_category__pizza</td>\n",
-       "      <td>0.007882</td>\n",
+       "      <th>160</th>\n",
+       "      <td>created_day_of_week__4</td>\n",
+       "      <td>0.008788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>clean_store_primary_category__nepalese</td>\n",
-       "      <td>0.007684</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>clean_store_primary_category__dim-sum</td>\n",
-       "      <td>0.007580</td>\n",
+       "      <th>46</th>\n",
+       "      <td>store_day_of_week_est_time_prep_per_item_min</td>\n",
+       "      <td>0.008743</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1470,24 +1532,24 @@
       ],
       "text/plain": [
        "                                         features  importance\n",
-       "163                          pred_order_prep_time    0.314096\n",
-       "10                              est_time_non-prep    0.050941\n",
-       "9    estimated_store_to_consumer_driving_duration    0.022149\n",
-       "128                                market_id__4.0    0.012894\n",
-       "16                         onshift_to_outstanding    0.012503\n",
-       "76          clean_store_primary_category__dessert    0.011970\n",
-       "0                                     total_items    0.010003\n",
-       "21                hour_mean_total_onshift_dashers    0.009541\n",
-       "8                  estimated_order_place_duration    0.009181\n",
-       "58         clean_store_primary_category__american    0.008342\n",
-       "31                             hour_busy_outs_avg    0.008217\n",
-       "88           clean_store_primary_category__indian    0.008135\n",
-       "107           clean_store_primary_category__pizza    0.007882\n",
-       "101        clean_store_primary_category__nepalese    0.007684\n",
-       "77          clean_store_primary_category__dim-sum    0.007580"
+       "163                          pred_order_prep_time    0.225464\n",
+       "10                              est_time_non-prep    0.060059\n",
+       "126                                market_id__2.0    0.019890\n",
+       "130                                market_id__6.0    0.017967\n",
+       "152                       created_hour_of_day__20    0.017099\n",
+       "71         clean_store_primary_category__catering    0.014153\n",
+       "9    estimated_store_to_consumer_driving_duration    0.013680\n",
+       "29                          hour_onshift_outs_avg    0.012411\n",
+       "16                         onshift_to_outstanding    0.010589\n",
+       "136                           order_protocol__6.0    0.010142\n",
+       "15                            busy_to_outstanding    0.009702\n",
+       "31                             hour_busy_outs_avg    0.009468\n",
+       "156                        created_day_of_week__0    0.009286\n",
+       "160                        created_day_of_week__4    0.008788\n",
+       "46   store_day_of_week_est_time_prep_per_item_min    0.008743"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1563,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Despite adding a new and promising feature, the inability of the first model to accurately estimate the amount of time an order spends in the store produces a somewhat disappointing outcome. The cross-validated RMSE is only 869.73865."
+    "#### Conclusions on adding an estimated order prep-time feature\n",
+    "\n",
+    "For the sake of a holistic comparison, let us compare the two-step ensemble model and the single-step model in three distinct ways:\n",
+    "\n",
+    "**Holdout performance:**  Despite being a valuable feature (according to feature importance), estimating order preparation time does not have a discernable impact on the performance of a model compared to a model that was not trained with said feature.\n",
+    "\n",
+    "**Cross-validation scores:** The two-step ensemble model produces five-fold RMSE scores that are much better than those of the single-step model.\n",
+    "\n",
+    "**Training set performance:** Normally one can ignore the performance of the model's evaluation of a training set but the significant gap between the holdout score and the training score, in addition to the low variance of the cv scores, may point to the two-step ensemble model being overfitted.\n",
+    "\n",
+    "Recall that there are many outliers in this dataset, and that RMSE is very sensitive to outliers compared to other performance evaluation metrics like MAE. The results of the comparison above and the uniformity of the cv scores present us with a final question/hypothesis that will let us determine if the prep. time estimation is worth the time and expense:\n",
+    "\n",
+    "**Does adding an estimated order preparation time feature improve a model's ability to accurately estimate total delivery time values that will fall within a normal distribution/within three DoF of the mean?**\n",
+    "\n",
+    "In other words, even if the two-step ensemble model does not offer improved outlier estimation performance, does the addition of order preparation time improve our ability to estimate total delivery time for 'normal' orders? As evidenced by previous analysis, whatever feature(s) that indicate whether or not the total delivery time will be a positive outlier (greater than the mean) are not available in the featureset. Given the nature of the problem, one could argue that what makes an order an outlier is attributable to too many random factors and is not knowable.\n",
+    "\n",
+    "The final part of this notebook will compare the performance of the single-step and two-step ensemble models against data with and without various mixes of total delivery time outliers."
    ]
   }
  ],
