Write-up updates, final step work

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,6 +1398,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65.93594673475154\n",
+      "811.2867824481718\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.var([684.0892768296953, 681.0979618118614, 677.0700958150553, 699.8305918514759, 691.835106692473]))\n",
+    "print(np.var([928.0659595118198, 866.9700127007313, 861.5295421654322, 927.3771927147455, 899.9744304738704]))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1415,9 +1434,13 @@
     "\n",
     "    [684.0892768296953, 681.0979618118614, 677.0700958150553, 699.8305918514759, 691.835106692473]\n",
     "\n",
-    "Mean RMSE from cv: 686.7846066001122\n",
+    "Mean RMSE from cv: \n",
     "\n",
-    "cv RMSE to y-true std: 0.7761858125345661"
+    "    686.7846066001122\n",
+    "\n",
+    "cv RMSE to y-true std: \n",
+    "\n",
+    "    0.7761858125345661"
    ]
   },
   {
@@ -1569,7 +1592,7 @@
     "\n",
     "**Holdout performance:**  Despite being a valuable feature (according to feature importance), estimating order preparation time does not have a discernable impact on the performance of a model compared to a model that was not trained with said feature.\n",
     "\n",
-    "**Cross-validation scores:** The two-step ensemble model produces five-fold RMSE scores that are much better than those of the single-step model.\n",
+    "**Cross-validation scores:** The mean of the RMSE scores for the two-step model (686.78) is significantly better than the mean of the RMSE scores for the single model (896.78). What's more, the variance of the two-step ensemble model (65.9359) is dramatically lower/better than the variance seen in the scores for the single model (811.2868).\n",
     "\n",
     "**Training set performance:** Normally one can ignore the performance of the model's evaluation of a training set but the significant gap between the holdout score and the training score, in addition to the low variance of the cv scores, may point to the two-step ensemble model being overfitted.\n",
     "\n",
@@ -1580,6 +1603,16 @@
     "In other words, even if the two-step ensemble model does not offer improved outlier estimation performance, does the addition of order preparation time improve our ability to estimate total delivery time for 'normal' orders? As evidenced by previous analysis, whatever feature(s) that indicate whether or not the total delivery time will be a positive outlier (greater than the mean) are not available in the featureset. Given the nature of the problem, one could argue that what makes an order an outlier is attributable to too many random factors and is not knowable.\n",
     "\n",
     "The final part of this notebook will compare the performance of the single-step and two-step ensemble models against data with and without various mixes of total delivery time outliers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train_df.drop(columns=['actual_total_delivery_duration'])\n",
+    "y = train_df[['actual_total_delivery_duration']]"
    ]
   }
  ],
