--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1566,15 +1566,15 @@
     "\n",
     "**Cross-validation scores:** The mean of the RMSE scores for the two-step model (686.78) is significantly better than the mean of the RMSE scores for the single model (896.78). What's more, the variance of the two-step ensemble model (65.9359) is dramatically lower/better than the variance seen in the scores for the single model (811.2868).\n",
     "\n",
-    "**Training set performance:** The significant gap between the holdout score and the training score, in addition to the low variance of the cv scores, may point to the two-step ensemble model being overfitted. Alternatively, the sampling method for the train-test split happened to bin most of the outliers in the test/holdout dataset.\n",
+    "**Training set performance:** The significant gap between the holdout score and the training score, in addition to the low variance of the cv scores, may point to the two-step ensemble model being overfitted. \n",
     "\n",
-    "Recall that there are many outliers in this dataset, and that RMSE is very sensitive to outliers compared to other performance evaluation metrics like MAE. The results of the comparison above and the uniformity of the cv scores present us with a final question/hypothesis that will let us determine if the prep. time estimation is worth the time and expense:\n",
+    "If one were being generous, one could say that it appears that the ensemble model is slightly better than the single model but that the performance against the set of holdout data is concerning and needs addressing before a firm choice is made. This leads us to one final question:\n",
     "\n",
-    "**Does adding an estimated order preparation time feature improve a model's ability to accurately estimate total delivery time values that will fall within a normal distribution/within three DoF of the mean?**\n",
+    "**Does adding an estimated order preparation time feature improve a model's ability to accurately estimate total delivery time values when the model is presented with random samples of 'seen' and 'unseen' data?**\n",
     "\n",
-    "In other words, even if the two-step ensemble model does not offer improved outlier estimation performance, does the addition of order preparation time improve our ability to estimate total delivery time for 'normal' orders? As evidenced by previous analysis, whatever feature(s) that indicate whether or not the total delivery time will be a positive outlier (greater than the mean) are not available in the featureset. Given the nature of the problem, one could argue that what makes an order an outlier is attributable to too many random factors and is not knowable.\n",
+    "In other words, does the seed of the train-test split favor one model over another? The single model performs better against the holdout data, but the ensemble model handily outperforms the single model in cross-validation.\n",
     "\n",
-    "The final part of this notebook will compare the performance of the single-step and two-step ensemble models against data with and without various mixes of total delivery time outliers."
+    "The final part of this notebook will present both models with random samples of data from the entire dataset and compare the performance of the single-step and two-step ensemble models."
    ]
   },
   {
@@ -1801,9 +1801,9 @@
    "source": [
     "**Do the results of the random sampling evaluation of the holdout data mean that the single model is better than the ensemble model? Could the results of the ensemble model's random sampling of the entire dataset be explained by overfitting?**  No. Recall that the cross-validation scores are derived from a train/test split. The results above point to the single model being slightly better at evaluating a specific set of holdout data (x_holdout), which is defined by the seed. The single model is not able to replicate that comparatively better performance during cross-validation, and as evidenced in the evaluation above the single model is not able to produce a better score than the ensemble model when evaluating random samples comprised of a mix of 'seen' and 'unseen' records.\n",
     "\n",
-    "Although the statistical rigour of this final round of testing would be better served by further cross-validation and evaluation of different train-test splits, that would be immensely time consuming and one could argue that the final choice of models would not change.\n",
+    "Although the statistical rigour of this final round of testing would be better served by further cross-validation and evaluation of different train-test split seeds, that would be immensely time consuming and one could argue that the final choice of models would not change.\n",
     "\n",
-    "The final RMSE score for this project is 686.7846066001122."
+    "The final RMSE score for this project is 686.7846066001122, or just under 11 minutes 30 seconds."
    ]
   }
  ],
